<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oxilo.mrsafer.fragement.Alerts">

        <TextView
            android:id="@+id/title"
            style="@style/CodeFont.Blue.Medium"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/activity_vertical_margin"
            android:background="@color/send_btn_color"
            android:padding="@dimen/padding_15"
            android:textAllCaps="true"
            android:text="@string/raise_an_alert"/>


    <RelativeLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:layout_above="@+id/divider"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/laout_seperator"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:visibility="invisible"
            android:background="@color/selected_text_color"
            android:layout_centerInParent="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/laout_seperator">

            <LinearLayout
                android:id="@+id/top_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/event_icon_width"
                    android:layout_height="@dimen/event_icon_height"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/altercation"/>

                <TextView
                    android:id="@+id/altercation_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/selected_text_color"
                    android:textSize="12sp"
                    android:paddingTop="@dimen/padding_5"
                    android:text="@string/altercation"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/top_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/event_icon_width"
                    android:layout_height="@dimen/event_icon_height"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/offence"/>

                <TextView
                    android:id="@+id/offence_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/selected_text_color"
                    android:textSize="12sp"
                    android:paddingTop="@dimen/padding_5"
                    android:text="@string/offence"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/top_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/event_icon_width"
                    android:layout_height="@dimen/event_icon_height"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/harassment"/>

                <TextView
                    android:id="@+id/harrasment_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/selected_text_color"
                    android:textSize="12sp"
                    android:paddingTop="@dimen/padding_5"
                    android:text="@string/harassment"/>

            </LinearLayout>




        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/laout_seperator">

            <LinearLayout
                android:id="@+id/top_bottom_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/event_icon_width"
                    android:layout_height="@dimen/event_icon_height"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/doubt"/>

                <TextView
                    android:id="@+id/doubt_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/selected_text_color"
                    android:textSize="12sp"
                    android:paddingTop="@dimen/padding_5"
                    android:text="@string/doubt"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/top_bottom_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/event_icon_width"
                    android:layout_height="@dimen/event_icon_height"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/incident"/>

                <TextView
                    android:id="@+id/incident_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/selected_text_color"
                    android:textSize="12sp"
                    android:paddingTop="@dimen/padding_5"
                    android:text="@string/incident"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/top_bottom_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/event_icon_width"
                    android:layout_height="@dimen/event_icon_height"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:src="@drawable/other"/>

                <TextView
                    android:id="@+id/others_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/selected_text_color"
                    android:textSize="12sp"
                    android:paddingTop="@dimen/padding_5"
                    android:text="@string/others"/>

            </LinearLayout>




        </RelativeLayout>







    </RelativeLayout>

    <TextView
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/bottom_container"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="#112f56"/>

    <RelativeLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/bottom_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/margin_15"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/event_icon_width"
                android:layout_height="@dimen/event_icon_height"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/ambulance"/>

            <TextView
                android:id="@+id/ambulance_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/selected_text_color"
                android:textSize="12sp"
                android:paddingTop="@dimen/padding_5"
                android:text="@string/ambulance"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_15"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/event_icon_width"
                android:layout_height="@dimen/event_icon_height"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/fire_department"/>

            <TextView
                android:id="@+id/fire_department_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/selected_text_color"
                android:textSize="12sp"
                android:paddingTop="@dimen/padding_5"
                android:text="@string/fire_department"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/margin_15"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/event_icon_width"
                android:layout_height="@dimen/event_icon_height"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/police"/>

            <TextView
                android:id="@+id/police_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/selected_text_color"
                android:textSize="12sp"
                android:paddingTop="@dimen/padding_5"
                android:text="@string/police"/>

        </LinearLayout>


    </RelativeLayout>





</RelativeLayout>
