<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activty.WelcomeActivity">


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/main.appbar"
            android:layout_width="match_parent"
            android:layout_height="196dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/main.collapsing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:fitsSystemWindows="true"
                app:contentScrim="@android:color/white"
                app:titleEnabled="false">

                <ImageView
                    android:id="@+id/main.backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:fitsSystemWindows="true"
                    android:background="#112f56"
                    app:layout_collapseMode="parallax"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center">
                    <!-- stack second view to left. -->
                    <ImageView
                        android:id="@+id/right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/logo"
                        android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Inscription"
                    android:layout_marginTop="10dp"
                    style="@style/Base.TextAppearance.AppCompat.Headline"/>

                </LinearLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:layout_collapseMode="pin"
                    />
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:paddingRight="3dp"
                android:background="@drawable/rounded_corner_edittext"
                android:orientation="vertical">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:spinnerMode="dropdown"
                    android:entries="@array/spinner_arrays"
                    android:prompt="@string/spinner_prompt">

                </Spinner>
            </LinearLayout>


            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#bdbdbd"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"
                android:padding="12dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/ub_email"
                android:gravity="center|left"
                android:layout_marginTop="@dimen/margin_25"/>

            <EditText
                android:id="@+id/txt_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#bdbdbd"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"
                android:padding="12dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/ub_pwd"
                android:gravity="center|left"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/txt_cfpwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#bdbdbd"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"
                android:padding="12dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/ub_confirm_pwd"
                android:gravity="center|left"
                android:layout_marginTop="16dp"/>


            <TextView
                android:id="@+id/txt_aggrement"
                style="@style/CodeFont.LightGray.Small"
                android:text="@string/login_aggrement"
                android:paddingTop="10dp"
                android:gravity="center"/>

            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/gradiant_button"
                android:text="@string/ub_register" />
        </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
</RelativeLayout>
